--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 
             <section class="color-1 col-lg-12">
 
+            	<div class="gameDiv">
+            		
+            	</div>
+
             </section>
 
         </div><!-- /container -->
