--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             <section class="color-1 col-lg-12">
 
             	<div class="gameDiv">
+
+            		<div class="mainMenu">
+            			
+            		</div>
+
             		
             	</div>
 
