--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
 
             	<div class="gameDiv">
 
-            		<div class="mainMenu">
+            		<div class="mainMenu active">
+
+            		</div>
+
+            		<div class="optionsMenu">
+            			
+            		</div>
+
+            		<div class="inGame">
             			
             		</div>
 
