--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 
             	<div class="gameDiv">
 
-            		<div class="displayedView mainMenu active">
+            		<div class="mainMenu displayedView active">
 
             		</div>
 
-            		<div class="displayedView optionsMenu">
+            		<div class="optionsMenu displayedView">
             			
             		</div>
 
-            		<div class="displayedView inGame">
+            		<div class="inGame displayedView">
             			
             		</div>
 
