--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
     <body>
 
-        <div class="container col-lg-12">
+        <div class="container">
 
-        	<div class="gameDiv">
+        	<div class="gameDiv col-lg-12">
 
         		<div class="mainMenu displayedView active">
 
