--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
 
         		<div class="mainMenu displayedView active">
 
+        		<div class="menuButtons btnContainer">
+
+                        <p class="col-lg-12 BTNRow">
+                            <button class="button button-2 button-2c" id="BTNStartGame">Start Game</button>
+                            <button class="button button-2 button-2c" id="BTNOptions">Options</button>
+                            <button class="button button-2 button-2c" id="BTNCredits">Credits</button>
+                        </p>
+
+                    </div>
+
         		</div>
 
         		<div class="optionsMenu displayedView">
