--- a/index.html
+++ b/index.html
@@ -67,16 +67,24 @@
         	<div class="gameDiv col-lg-12">
 
         		<div class="mainMenu displayedView active">
+        			<center>
 
-        		<div class="menuButtons btnContainer">
+	        			<div class="menuButtons btnContainer">
 
-                        <p class="col-lg-12 BTNRow">
-                            <button class="button button-2 button-2c" id="BTNStartGame">Start Game</button>
-                            <button class="button button-2 button-2c" id="BTNOptions">Options</button>
-                            <button class="button button-2 button-2c" id="BTNCredits">Credits</button>
-                        </p>
+	                        <p class="col-lg-12 BTNRow">
+	                            <button class="button button-2 button-2c" id="BTNStartGame">Start Game</button>
+	                        </p>
 
-                    </div>
+	                        <p class="col-lg-12 BTNRow">
+	                            <button class="button button-2 button-2c" id="BTNOptions">Options</button>
+	                        </p>
+
+	                        <p class="col-lg-12 BTNRow">
+	                            <button class="button button-2 button-2c" id="BTNCredits">Credits</button>
+	                        </p>
+	                    </div>
+	                    
+                    </center>
 
         		</div>
 
