--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 
         	<div class="gameDiv col-lg-12">
 
+        		<!-- Main Menu - Start -->
+
         		<div class="mainMenu displayedView active">
+
         			<center>
 
 	        			<div class="menuButtons btnContainer">
@@ -82,11 +85,14 @@
 	                        <p class="col-lg-12 BTNRow">
 	                            <button class="button button-2 button-2c" id="BTNCredits">Credits</button>
 	                        </p>
+
 	                    </div>
-	                    
+
                     </center>
 
         		</div>
+
+        		<!-- Main Menu - End -->
 
         		<div class="optionsMenu displayedView">
         			
