--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 
         			<center>
 
+        				<h1 class="mainMenuTitle">Memorize</h1>
+
 	        			<div class="menuButtons btnContainer">
 
 	                        <p class="col-lg-12 BTNRow">
