--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
         <div class="container">
 
-        	<div class="gameDiv col-lg-12">
+        	<div class="gameDiv">
 
         		<!-- Main Menu - Start -->
 
-        		<div class="mainMenu displayedView active">
+        		<div class="mainMenu col-lg-12 displayedView active">
 
         			<center>
 
@@ -96,11 +96,11 @@
 
         		<!-- Main Menu - End -->
 
-        		<div class="optionsMenu displayedView">
+        		<div class="optionsMenu col-lg-12 displayedView">
         			
         		</div>
 
-        		<div class="inGame displayedView">
+        		<div class="inGame col-lg-12 displayedView">
         			
         		</div>
 
