--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         			
         		</div>
 
-        		<div class="Credits col-lg-12 displayedView">
+        		<div class="credits col-lg-12 displayedView">
         			
         		</div>
 
