🔁 Edit HTML & JS

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
 
 		</div><!-- /container -->
 
+		<div class="hidden audioContainer">
+			<audio id="btnClickAudio" src="http://www.soundjay.com/button/beep-07.wav" autoplay="false"></audio>
+		</div><!-- /audio container -->
+
 		<script src="js/scripts.js"></script>
 
 	</body>
