--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 
 					<p class="col-lg-12 BTNRow">
 						<button class="button button-2 button-2c backBTN">Menu</button>
+						<div id="GameContainer">
+
+						</div>
 					</p>
 					
 				</div>
