--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
 					<p class="col-lg-12 BTNRow">
 						<button class="button button-2 button-2c backBTN">Menu</button>
 						<div id="GameContainer">
-							<div id="CurrentShape">
-								<div class="triangle"></div>
+
+							<div id="CurrentShapeContainer">
+
+								<div id="CurrentShape" class="triangle"></div>
+
 							</div>
+
 						</div>
 					</p>
 					
