--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<center>
 								<div id="CurrentShapeContainer">
 
-									<div id="CurrentShape" class="circle"></div>
+									<div id="CurrentShape" class="circle blue"></div>
 
 								</div>
 							</center>
