--- a/index.html
+++ b/index.html
@@ -100,16 +100,18 @@
 
 					<p class="col-lg-12 BTNRow">
 						<button class="button button-2 button-2c backBTN">Menu</button>
-						<div id="GameContainer">
-							<center>
-								<div id="CurrentShapeContainer">
-
-									<div id="CurrentShape" class="circle blue"></div>
-
-								</div>
-							</center>
-						</div>
 					</p>
+
+					<div id="GameContainer" class="col-lg-12">
+						<center>
+							<div id="CurrentShapeContainer">
+
+								<div id="CurrentShape" class="circle blue"></div>
+
+							</div>
+						</center>
+					</div>
+					
 					
 				</div>
 
